Push to github repository.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,6 +26,6 @@ jobs:
         run: dotnet pack --configuration Release /p:Version=${VERSION} --no-build --output .
       - name: Push
         run: |
-          dotnet nuget push Blockly.Net.${VERSION}.nupkg --api-key ${GITHUB_TOKEN}
+          dotnet nuget push Blockly.Net.${VERSION}.nupkg --api-key ${GITHUB_TOKEN} --source https://nuget.pkg.github.com/ZeraGmbH/index.json
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
