--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -24,7 +24,12 @@ jobs:
           submodules: true
           ref: ${{ github.event.inputs.commit_sha }}
 
-      - name: Setup .NET Core
+      - name: Setup .NET Core 8
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.0.x
+
+      - name: Setup .NET Core 9
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 9.0.x
