Added support for .NET 10.

--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -34,6 +34,11 @@ jobs:
         with:
           dotnet-version: 9.0.x
 
+      - name: Setup .NET Core 10
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 10.0.x
+
       - name: Run Unit-Tests
         run: |
           dotnet test
